--- a/src/Seq.App.DigestEmail/Seq.App.DigestEmail.nuspec
+++ b/src/Seq.App.DigestEmail/Seq.App.DigestEmail.nuspec
@@ -9,7 +9,7 @@
     <language>en-US</language>
     <projectUrl>https://github.com/datalust/seq-app-digestemail</projectUrl>
     <licenseUrl>http://www.apache.org/licenses/LICENSE-2.0</licenseUrl>
-    <iconUrl>https://getseq.net/images/apps/seq-app-digestemail.png</iconUrl>
+    <iconUrl>https://raw.githubusercontent.com/datalust/seq-app-digestemail/master/asset/seq-app-digestemail.png</iconUrl>
     <tags>seq-app seq serilog events</tags>
   </metadata>
   <files>
