--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,7 +6,7 @@ assembly_info:
   file: '**\AssemblyInfo.*'
   assembly_version: '{version}.0'
   assembly_file_version: '{version}.0'
-  assembly_informational_version: '{version}-pre'
+  assembly_informational_version: '{version}'
 build:
   project: seq-app-digestemail.sln
   publish_nuget: true
