--- a/src/Seq.App.DigestEmail/packages.config
+++ b/src/Seq.App.DigestEmail/packages.config
@@ -2,6 +2,6 @@
 <packages>
   <package id="Handlebars.Net" version="1.7.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
-  <package id="Seq.Apps" version="3.4.0-pre-00001" targetFramework="net45" />
+  <package id="Seq.Apps" version="3.4.17" targetFramework="net45" />
   <package id="Serilog" version="2.0.0" targetFramework="net45" />
 </packages>
