--- a/test/Seq.App.DigestEmail.Tests/Seq.App.DigestEmail.Tests.csproj
+++ b/test/Seq.App.DigestEmail.Tests/Seq.App.DigestEmail.Tests.csproj
@@ -39,8 +39,8 @@
       <HintPath>..\..\packages\Handlebars.Net.1.7.1\lib\Handlebars.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Seq.Apps, Version=3.4.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Seq.Apps.3.4.0-pre-00001\lib\net45\Seq.Apps.dll</HintPath>
+    <Reference Include="Seq.Apps, Version=3.4.17.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Seq.Apps.3.4.17\lib\net45\Seq.Apps.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Serilog, Version=2.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
