--- a/test/Seq.App.DigestEmail.Tests/packages.config
+++ b/test/Seq.App.DigestEmail.Tests/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Handlebars.Net" version="1.7.1" targetFramework="net45" />
-  <package id="Seq.Apps" version="3.4.0-pre-00001" targetFramework="net45" />
+  <package id="Seq.Apps" version="3.4.17" targetFramework="net45" />
   <package id="Serilog" version="2.0.0" targetFramework="net45" />
   <package id="xunit" version="2.1.0" targetFramework="net45" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net45" />
