--- a/test/Seq.App.DigestEmail.Tests/Seq.App.DigestEmail.Tests.csproj
+++ b/test/Seq.App.DigestEmail.Tests/Seq.App.DigestEmail.Tests.csproj
@@ -36,7 +36,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Handlebars, Version=1.0.0.0, Culture=neutral, PublicKeyToken=22225d0bf33cd661, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Handlebars.Net.1.7.1\lib\Handlebars.dll</HintPath>
+      <HintPath>..\..\packages\Handlebars.Net.1.8.0\lib\portable-net45+sl5+wp8+win8\Handlebars.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Seq.Apps, Version=3.4.17.0, Culture=neutral, processorArchitecture=MSIL">
